[project]
name = "taskbench-planka"
version = "1.0.0"
description = "Planka adapter for Taskbench — a backend-pluggable, agent-first task CLI."
authors = [{ name = "Evan Oman", email = "evan@example.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["taskbench", "planka", "task-management", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "taskbench>=1.0.0",
    "plankapy>=2.2.2",
]

[project.urls]
Homepage = "https://github.com/EvanOman/taskbench-planka"
Source = "https://github.com/EvanOman/taskbench-planka"
"Bug Tracker" = "https://github.com/EvanOman/taskbench-planka/issues"

[project.entry-points."taskbench.providers"]
planka = "taskbench_planka:PlankaProvider"

[tool.uv.sources]
# Taskbench isn't on PyPI yet; install from git for development.
taskbench = { git = "https://github.com/EvanOman/taskbench.git" }

[tool.hatch.build.targets.wheel]
packages = ["src/taskbench_planka"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
extend-select = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
